<resources>
    <string name="app_name">OECH</string>
    <string name="create_an_a">
Create an account
</string>
    <string name="complete_th">
Complete the sign up process to get started
</string>
    <string name="lablename">
LableName
</string>
    <string name="welcome_bac">
Welcome Back
</string>
    <string name="fill_in_you">
Fill in your email and password to continue
</string>
    <string name="forgot_pass">
Forgot Password
</string>
    <string name="enter_your_">
Enter your email address
</string>
    <string name="otp_verific">
OTP Verification
</string>
    <string name="enter_the_6">
Enter the 6 digit numbers sent to your email
</string>
    <string name="if_you_didn">If you didn\'t receive code, </string>
    <string name="resend_afte"> resend after 1:00</string>
    <string name="terms_and_conditions">By ticking this box, you agree to our <a href="https://google.com">Terms and conditions and private policy</a></string>
    <string name="new_passwor">
New Password
</string>
    <string name="enter_new_p">
Enter new password
</string>
    <string name="delivery_fe">
Delivery fee
</string>
</resources>