<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/otp_verific"
                    android:textAppearance="@style/forgot_pass" />

                <TextView
                    android:id="@+id/enter_your_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enter_the_6"
                    android:textAppearance="@style/enter_your_" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/otp_verification_ed1"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/otp_ed_backgr"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textAppearance="@style/hint" />

                    <EditText
                        android:id="@+id/otp_verification_ed2"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/otp_ed_backgr"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textAppearance="@style/hint" />

                    <EditText
                        android:id="@+id/otp_verification_ed3"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/otp_ed_backgr"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textAppearance="@style/hint" />

                    <EditText
                        android:id="@+id/otp_verification_ed4"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/otp_ed_backgr"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textAppearance="@style/hint" />

                    <EditText
                        android:id="@+id/otp_verification_ed5"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/otp_ed_backgr"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textAppearance="@style/hint" />

                    <EditText
                        android:id="@+id/otp_verification_ed6"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/otp_ed_backgr"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textAppearance="@style/hint" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/if_you_didn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/if_you_didn"
                        android:textAppearance="@style/if_you_didn" />

                    <TextView
                        android:id="@+id/resend_afte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resend_afte"
                        android:textAppearance="@style/if_you_didn" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/otp_verification_mb"
                    style="@style/ThemeOverlay.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="82dp"
                    android:enabled="false"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="Set New Password"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="4dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Remember password? Back to "
                        android:textAppearance="@style/lablename" />

                    <TextView
                        android:id="@+id/otp_verification_sign_in_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Sign in"
                        android:textAppearance="@style/lablename"
                        android:textColor="?colorPrimary" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>