<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:text="@string/create_an_a"
                    android:textAppearance="@style/create_an_a" />

                <TextView
                    android:id="@+id/complete_th"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/complete_th"
                    android:textAppearance="@style/complete_th" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:layout_marginBottom="8dp"
                    android:text="Full name"
                    android:textAppearance="@style/lablename" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_til1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_tiet1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Ivanov Ivan"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textAppearance="@style/hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Phone Number"
                    android:textAppearance="@style/lablename" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_til2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_tiet2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="+7(999)999-99-99"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textAppearance="@style/hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Email Address"
                    android:textAppearance="@style/lablename" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_til3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_tiet3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="***********@mail.com"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textAppearance="@style/hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Password"
                    android:textAppearance="@style/lablename" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_til4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:endIconDrawable="@drawable/pass_toggle"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#292D32"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_tiet4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="**********"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textAppearance="@style/hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Confirm Password"
                    android:textAppearance="@style/lablename" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_til5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:endIconDrawable="@drawable/pass_toggle"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#292D32"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_tiet5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="**********"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textAppearance="@style/hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/sign_up_cb"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:textColorLink="#EBBC2E"
                    android:buttonTint="#006CEC"
                    android:checked="false"
                    android:gravity="center"
                    android:autoLink="web"
                    android:text="@string/terms_and_conditions"
                    android:linksClickable="true"
                    android:textColor="#A7A7A7"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_mb"
                    style="@style/ThemeOverlay.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:enabled="false"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="4dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoLink="none"
                        android:gravity="center"
                        android:text="Already have an account? "
                        android:textAppearance="@style/lablename" />

                    <TextView
                        android:id="@+id/sign_up_already_sign_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoLink="none"
                        android:gravity="center"
                        android:text="Sign in"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:autoLink="none"
                    android:gravity="center"
                    android:text="or sign in using"
                    android:textAppearance="@style/lablename" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="28dp"
                    android:src="@drawable/icon_google" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>